--- a/src/app/contact/ContactHero.module.css
+++ b/src/app/contact/ContactHero.module.css
@@ -1,6 +1,6 @@
 .hero {
   position: relative;
-  background: linear-gradient(120deg, #f8fafc 0%, #e0f2fe 100%);
+  background: linear-gradient(120deg, #f8fafc 0%, #fee0ef 100%);
   color: #222;
   text-align: center;
   padding: 100px 20px 100px 20px;
@@ -100,8 +100,8 @@
   clip-path: polygon(0 0, 100% 0, 100% 85%, 80% 95%, 60% 100%, 40% 95%, 20% 100%, 0 85%);
   background: linear-gradient(to bottom, #f9fafb, #fff);
   z-index: 1;
-  padding-bottom: 8rem !important;
-  padding-top: 3rem;
+  padding-bottom: 0rem !important;
+  padding-top: 2rem;
   padding-left: 0;
   padding-right: 0;
 }
@@ -154,7 +154,7 @@
     width: 60%;
   }
   .contactInfoSection {
-    padding: 2.5rem 0 5rem 0 !important;
+    padding: 5rem 0 0rem 0 !important;
     clip-path: none;
   }
   .contactInfoSection > div {
